# game-asset-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
docs/: README.md  batch-spec.md  providers.md  roadmap.md  spec.md  technical-design.md
skills/game-asset/: SKILL.md
src/: main.rs
