[package]
name = "game-asset-cli"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Stateless CLI for generating and post-processing game assets"

[[bin]]
name = "game-asset"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
hex = "0.4"
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
tokio = { version = "1.41", features = ["macros", "process", "rt-multi-thread", "time"] }
walkdir = "2.5"
which = "7.0"
